--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             cadastrarAluno();
                             break;
                         case 2:
-                            let matricula = prompt("Informe o número da matrícula para editar as informações:")
+                            let matricula = String(prompt("Informe o número da matrícula para editar as informações:"))
                             editarInformacoes(matricula);
                             break;
                         case 3:
